--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="#">
     <script src="./script.js"></script>
+    <link rel="stylesheet" href="./styles/main.css">
     <title>Let's Play Snap!</title>
 </head>
 <body>
-    
+    <div class="deck">
+        <div class="card">
+        </div>
+        <div class="card"></div>
+    </div>
+    <div class="header">
+        <h1>Click space to "Snap!"</h1>
+    </div>
+    <div class="deck">
+        <div class="card">
+        </div>
+        <div class="card"></div>
+    </div>
 </body>
 </html>
