added new element to create Card class to be tested

--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
     <title>Let's Play Snap!</title>
 </head>
 <body>
-    <div class="deck">
-        <div class="card">
-        </div>
-        <div class="card"></div>
+    <div class="cards">
+        <div class="deck"></div>
+        <div class="inplay"></div>
     </div>
     <div class="header">
         <h1>Click space to "Snap!"</h1>
     </div>
-    <div class="deck">
-        <div class="card">
-        </div>
-        <div class="card"></div>
+    <div class="cards">
+        <div class="inplay"></div>
+        <div class="deck"></div>
     </div>
 </body>
 </html>
