added styling to CSS and added isPlayerTurn attribute to game

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="inplay"></div>
     </div>
     <div class="header">
-        <h1>Click space to "Snap!"</h1>
+        <h1>Click space to 'Snap!'</h1>
     </div>
     <div class="cards">
         <div class="inplay"></div>
