adding event listener to deck

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./styles/main.css">
     <title>Let's Play Snap!</title>
 </head>
-<body>
+<body class="game">
+    <div class="points"></div>
     <div class="cards">
         <div class="deck"></div>
         <div class="inplay"></div>
