fixed error with 10 card which was erroring with a URL problem,

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Let's Play Snap!</title>
 </head>
 <body>
-    <div class="points">Test</div>
+    <div class="points">Score: 1 - 1</div>
     <div class="cards">
         <div class="deck" id="deck1">
         </div>
