--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
     <title>Let's Play Snap!</title>
 </head>
 <body>
-    <div class="points">Score: 1 - 1</div>
+    <div class="points">Player 1: 1 - 1</div>
     <div class="cards">
         <div class="deck" id="deck1">
         </div>
         <div id="inplay1"></div>
-    </div>
-    <div class="header">
-        <h1>Click space to 'Snap!'</h1>
     </div>
     <div class="cards">
         <div id="inplay2"></div>
