--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Let's Play Snap!</title>
 </head>
 <body>
-    <div class="points">Player 1: 1 - 1</div>
+    <div id="score">Player 1: 0 | 0 : Player 2</div>
     <div class="cards">
         <div class="deck" id="deck1">
         </div>
