added styling to page adding instructions and colour

--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
     <title>Let's Play Snap!</title>
 </head>
 <body>
-    <div id="score">Player 1: 0 | 0 : Player 2</div>
+    <div id="score">0 - 0</div>
     <div class="cards">
-        <div class="deck" id="deck1">
+        <div class="info-text">
+        <h2>Press <span class="snap-text">A</span> to call <span class="snap-text">snap!</span></h2>
+        <h2>1 point for a valid snap</h2>
+        <h2>-1 point if you f*** up! Aw Snap!</h2>
         </div>
+        <div class="deck" id="deck1"></div>
         <div id="inplay1"></div>
     </div>
     <div class="cards">
         <div class="deck" id="deck2"></div>
         <div id="inplay2"></div>
+        <div class="info-text">
+            <h2>Press <span class="snap-text">L</span> to call <span class="snap-text">snap!</span></h2>
+            <h2>1 point  for a valid snap</h2>
+            <h2>-1 point if you f*** up! Aw Snap!</h2>
+            </div>
     </div>
 </body>
 </html>
